Update index.html and MainSection.js to use HTTPS for video sources and change preload attribute

--- a/public/index.html
+++ b/public/index.html
@@ -26,16 +26,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,700;1,400&display=swap" rel="stylesheet">     <title>Theo Eshetu</title>
     <!-- Preload above-the-fold images for instant display -->
-    <link rel="preload" as="image" href="http://drqlcggpj7pli.cloudfront.net/images/photography/albums/masked_thumb.png" crossorigin>
-    <link rel="preload" as="image" href="http://drqlcggpj7pli.cloudfront.net/images/photography/albums/10.png" crossorigin>
-    <link rel="preload" as="image" href="http://drqlcggpj7pli.cloudfront.net/images/thumbnails/croc.jpg" crossorigin>
-    <link rel="preload" as="image" href="http://drqlcggpj7pli.cloudfront.net/images/thumbnails/movingthumb.png" crossorigin>
-    <link rel="preload" as="image" href="http://drqlcggpj7pli.cloudfront.net/images/articles/paradise/para_thumb.jpg" crossorigin>
+    <link rel="preload" as="image" href="https://drqlcggpj7pli.cloudfront.net/images/thumbnails/croc.jpg" crossorigin>
+    <link rel="preload" as="image" href="https://drqlcggpj7pli.cloudfront.net/images/thumbnails/movingthumb.png" crossorigin>
   
   <!-- Preload landing videos and poster to prioritise above-the-fold media -->
-  <link rel="preload" as="video" href="http://drqlcggpj7pli.cloudfront.net/landing/nft_left_new.mov" crossorigin>
-  <link rel="preload" as="video" href="http://drqlcggpj7pli.cloudfront.net/landing/nft_center.mov" crossorigin>
-  <link rel="preload" as="video" href="http://drqlcggpj7pli.cloudfront.net/landing/nft_right_new.mov" crossorigin>
+  <link rel="preload" as="video" href="https://drqlcggpj7pli.cloudfront.net/landing/nft_left_new.mov" crossorigin>
+  <link rel="preload" as="video" href="https://drqlcggpj7pli.cloudfront.net/landing/nft_center.mov" crossorigin>
+  <link rel="preload" as="video" href="https://drqlcggpj7pli.cloudfront.net/landing/nft_right_new.mov" crossorigin>
   <link rel="preload" as="image" href="%PUBLIC_URL%/thumbnails/landing-left-thumb.png">
   <link rel="preload" as="image" href="%PUBLIC_URL%/thumbnails/landing-center-thumb.png">
   <link rel="preload" as="image" href="%PUBLIC_URL%/thumbnails/landing-right-thumb.png">
